--- a/basketball-counter.css
+++ b/basketball-counter.css
@@ -104,9 +104,11 @@
   border-radius: 50px;
   border: none;
   background-color: white;
-  height: 48px;
+  height: 6vh;
+  width: 13vw;
   margin-top: 100px;
   cursor: pointer;
+  font-size: 1em;
 }
 .newperiod {
   display: flex;
@@ -120,9 +122,11 @@
   border-radius: 50px;
   border: none;
   background-color: white;
-  height: 48px;
+  height: 6vh;
+  width: 13vw;
   margin-top: 108px;
   cursor: pointer;
+  font-size: 1em;
 }
 
 .period {
